--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -38,6 +38,7 @@ ambivalent ,/adj./@矛盾的;,/adj./@相克的;
 ameliorate ,/v./@改善;
 ammunition ,/n./@弹药;
 anesthetic ,/n./@止痛劑;,/adj./@無感覺的;
+Anglophone ,/n./@說英語的人;,/adj./@說英語的;
 annihilate ,/v./@殲滅;
 annotation ,/n./@注释;,/n./@註解;,/n./@釋文;
 antagonism ,/n./@敵對;,/n./@對抗;
@@ -130,6 +131,8 @@ collecting ,/n./@收集;
 collection ,/n./@收集;
 collective ,/n./@集體;,/adj./@集體的;
 collegiate ,/adj./@大學的;,/adj./@學院的;,/adj./@大學生的;
+colloquial ,/adj./@口語的;,/adj./@口語體的;,/adj./@會話的;
+colloquium ,/n./@學術研討會;,/n./@討論會;,/n./@學術報告會;
 coloration ,/n./@色彩;,/n./@著色;,/n./@上色;,/n./@染色;
 commandeer ,/v./@徵用;,/v./@霸占;,/v./@沒收;,/v./@強取;
 commentary ,/n./@实况报导;
@@ -300,6 +303,7 @@ expedition ,/n./@探险;
 experience ,/n./@经历;,/n./@经验;
 experiment ,/n./@实验;
 expiration ,/n./@呼气;,/n./@终结;
+exposition ,/n./@闡述;,/n./@解說;,/n./@展覽會;,/n./@博覽會;,/n./@背景介紹;
 expression ,/n./@表达;
 extensible ,/adj./@可擴展的;,/adj./@可擴張的;
 extinction ,/n./@灭亡;
@@ -336,6 +340,7 @@ gymnastics ,/n./@體操;
 gyrational ,/adj./@旋轉的;,/adj./@迴旋的;,/adj./@螺旋的;
 gyroscopic ,/adj./@陀螺儀的;,/adj./@迴轉儀的;
 handicraft ,/n./@手工艺品;
+harmonious ,/adj./@和諧的;,/adj./@協調的;,/adj./@調和的;,/adj./@和聲的;,/adj./@悅耳的;
 helicopter ,/n./@直升飞机;,/n./@直升機;
 hemoglobin ,/redirected./@target="haemoglobin";
 hemorrhage ,/n./@出血;,/n./@大出血;,/n./@大量流失;
@@ -421,6 +426,7 @@ kinematics ,/n./@运动学;
 knighthood ,/n./@騎士身分;,/n./@爵士身分;,/n./@爵士頭銜;,/n./@爵位;,/n./@騎士;
 Kyrgyzstan ,/n./@吉尔吉斯斯坦;
 laboratory ,/n./@實驗室;
+lavishness ,/n./@大方;,/n./@浪費;,/n./@豐富;
 leadership ,/n./@領導;
 legitimate ,/adj./@合法的;,/adj./@合理的;,/adj./@正統的;,/adj./@婚生的;
 lengendary ,/adj./@传奇般的;
@@ -451,6 +457,7 @@ menstruate ,/vi./@行經;,/vi./@月經來潮;
 mercantile ,/adj./@商業的;,/adj./@貿易的;,/adj./@商人的;
 metallurgy ,/n./@冶金学;
 methodical ,/adj./@有条理的;,/adj./@有条不紊的;
+meticulous ,/adj./@非常仔細的;,/adj./@一絲不苟的;,/adj./@小心翼翼的;
 microscope ,/n./@显微镜;
 millennium ,/n./@千禧年;,/n./@千年期;,/n./@太平盛世;,/n./@黃金時代;
 millilitre ,/n./@毫升;
@@ -488,6 +495,7 @@ occidental ,/adj./@西方的;,/adj./@西洋的;
 occupation ,/n./@職業;,/n./@佔有;
 occurrence ,/n./@发生;,/n./@出現;
 octahedron ,/n./@八面體;
+omnificent ,/adj./@創造萬物的;
 omniscient ,/adj./@全知的;
 opposition ,/n./@反对;
 optimistic ,/adj./@乐观的;
@@ -523,6 +531,7 @@ perversion ,/n./@歪曲;,/n./@曲解;,/n./@誤用;,/n./@濫用;,/n./@腐蝕;
 phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
+Phoenician ,/n./@腓尼基人;,/n./@腓尼基語;,/adj./@腓尼基的;,/adj./@腓尼基人的;,/adj./@腓尼基語的;
 phonograph ,/n./@留声机;,/n./@唱机;
 phosphorus ,/n./@磷;
 pickpocket ,/n./@扒手;,/n./@小偷;
@@ -560,6 +569,7 @@ prosperous ,/adj./@繁荣的;
 protection ,/n./@保護;
 protrusion ,/n./@突出;,/n./@突出物;
 providence ,/n./@天意;
+provincial ,/adj./@省的;,/adj./@外省的;,/adj./@外鄉的;
 psychopath ,/n./@精神病人;
 pubescence ,/n./@青春期;,/n./@軟毛;
 pugnacious ,/adj./@好战的;,/adj./@好斗的;
@@ -673,6 +683,7 @@ technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
 temptation ,/n./@诱惑;
+tenebrific ,/redirected./@target="tenebrous";
 thoughtful ,/adj./@深思的;
 throughout ,/prep./@貫穿;,/adv./@全部;
 throughput ,/n./@生產量;
@@ -715,6 +726,7 @@ validation ,/n./@確認;,/n./@批准;,/n./@生效;
 vehemently ,/adv./@激烈地;,/adv./@強烈地;,/adv./@猛烈的;
 ventilator ,/n./@呼吸机;,/n./@通风设备;,/n./@通风口;
 verifiable ,/adj./@可证实的;
+victorious ,/adj./@勝利的;,/adj./@戰勝的;,/adj./@獲勝的;,/adj./@凱旋的;
 vindictive ,/adj./@懷恨的;,/adj./@有報仇心的;,/adj./@懲罰的;
 visionally ,/adv./@虚幻地;
 vocabulary ,/n./@词汇;
