--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -74,6 +74,7 @@ condominium ,/n./@共同統治;
 confederate ,/adj./@同盟的;,/n./@同盟;,/n./@同盟國;,/n./@同盟者;,/vt./@聯盟;
 confinement ,/n./@限制;,/n./@監禁;,/n./@分娩;
 confounding ,/adj./@令人困惑的;
+conjugation ,/n./@詞形變化;
 conjunction ,/n./@结合;
 connotation ,/n./@暗示;,/n./@含義;
 consecutive ,/adj./@连贯的;,/adj./@连续的;
@@ -237,7 +238,7 @@ intensively ,/adv./@集中地;
 intentional ,/adj./@有意的;,/adj./@故意的;
 interaction ,/n./@相互作用;,/n./@互动;
 interactive ,/adj./@交互式的;,/adj./@相互作用的;
-intercourse ,/n./@交流;,/n./@性交;
+intercourse ,/n./@交流;,/n./@性交;,/n./@交往;,/n./@交媾;
 interesting ,/adj./@有趣的;
 interpreter ,/n./@譯員;
 interrogate ,/v./@审问;
@@ -287,6 +288,7 @@ parentheses ,/n./@括號;,/n./@圓括號;
 participant ,/adj./@参与的;,/adj./@参与者;
 participate ,/v./@参与;
 partnership ,/n./@夥伴關係;,/n./@合夥;
+paternoster ,/n./@主禱文;,/n./@頌主禱文時撥弄的念珠;
 pathologist ,/n./@病理學家;
 patronizing ,/adj./@屈尊俯就的;
 peculiarity ,/n./@特性;,/n./@奇怪;,/n./@怪异;,/n./@奇异;,/n./@古怪;,/n./@怪癖;,/n./@特点;,/n./@蹊跷;
@@ -357,6 +359,7 @@ restriction ,/n./@限制;
 retaliation ,/n./@報復;
 retribution ,/n./@报应;
 retroactive ,/adj./@追溯性的;
+revisionism ,/n./@修正主義;
 rudimentary ,/adj./@基本的;,/adj./@初步的;
 salvolatile ,/n./@嗅鹽;,/n./@揮發鹽;
 sarcophagus ,/n./@石棺;
