--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -6,7 +6,7 @@ appropriately ,/adj./@适当的;
 approximately ,/adv./@大约;
 archaeologist ,/n./@考古學家;
 assassination ,/n./@刺杀;
-authoritative ,/adj./@权威的;
+authoritative ,/adj./@权威的;,/adj./@權威性的;,/adj./@專斷的;,/adj./@命令式的;
 authorization ,/n./@授权;
 autobiography ,/n./@自传;
 automatically ,/adv./@自動地;
@@ -29,6 +29,7 @@ condescending ,/adj./@謙遜的;,/adj./@屈尊的;
 configuration ,/n./@配置;,/n./@结构;
 confrontation ,/n./@冲突;,/n./@对抗;
 congressional ,/adj./@会议的;,/adj./@国会的;
+conscientious ,/adj./@勤勤懇懇的;,/adj./@良心的;,/adj./@煞費苦心的;
 consciousness ,/n./@知覺;
 consideration ,/n./@考慮;,/n./@照顧;
 constellation ,/n./@星座;,/n./@星辰;,/n./@星群;,/n./@荟萃;,/n./@兴奋丛;
