--- a/Files/lang/ch/chinese2.csv
+++ b/Files/lang/ch/chinese2.csv
@@ -23,6 +23,7 @@ of ,/prep./@關於;,/prep./@屬於;
 on ,/prep./在@上@方;
 or ,/conj./@或者;
 ox ,/n./@牛;,/n./@公牛;
+PG ,/redirected./@target="parental guidance";
 re ,/adv.//pref./表@再@次;
 so ,/conj./@所以;,/adv./@如此;,/pron./@这样;
 to ,/prep./@對;,/prep./@去;,/prep./@到;,/prep./@向;
