--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -15,6 +15,7 @@ anal ,/n./@肛門的;
 anew ,/adv./@重新;
 anno ,/n./@伊斯兰教纪元;
 anti ,/pref./@反;,/pref./@抗;
+apex ,/n./@頂;,/n./@尖端;,/n./@頂點;
 apse ,/n./@教堂東端的半圓或多角形室;
 aqua ,/n./@水;,/n./@溶液;,/n./@淺綠色;,/adj./@淺綠的;
 arch ,/n./@弓形;,/n./@拱門;
@@ -52,7 +53,7 @@ base ,/n./@基礎;
 bash ,/v./@猛擊;,/v./@痛擊;
 bath ,/v./@洗澡;,/v./@沐浴;
 bawl ,/v./@大叫;
-bead ,/n./@珠子;
+bead ,/n./@珠子;,/n./@念珠;,/n./@小滴;
 beak ,/n./@鳥嘴;
 beam ,/n./@光綫;,/n./@電波;,/v./@发送;,/v./@照射;,/n./@秤桿;,/n./@船寬;,/n./@橫梁;
 bean ,/n./@豆子;
@@ -153,6 +154,7 @@ code ,/n./@代碼;,/n./@密碼;
 coil ,/n./圈;,/n./@綫圈;,/n./@卷;
 coke ,/n./@可樂;
 cold ,/adj./@冷的;
+com- ,/pref./@合;,/pref./@同;,/pref./@與;
 coma ,/n./@昏迷;,/n./@遲鈍;,/n./@冷漠;
 comb ,/n./@梳子;
 come ,/v./@來;
@@ -236,7 +238,7 @@ dork ,/n./@笨蛋;,/n./@呆子;,/n./@陰莖;
 dorm ,/n./@宿舍;
 dour ,/adj./@嚴厲的;,/adj./@頑強的;,/adj./@陰沉的;
 dove ,/n./@鴿子;
-down ,/adv./@向下;
+down ,/adv./@向下;,/adv./@在下面;,/prep./@在...下方;
 doze ,/v./@瞌睡;
 drab ,/adj./@無趣的;
 drag ,/v./@拉;,/v./@拽;
@@ -773,6 +775,7 @@ pour ,/v./@傾瀉;,/v./@灌;,/v./@注;,/v./@倒;,/v./@流出;
 pout ,/v./@噘嘴;
 pram ,/n./@嬰兒車;
 pray ,/v./@祈禱;
+pre- ,/pref./@前;,/pref./@在前;,/pref./@預先;
 prey ,/n./@獵物;
 prim ,/adj./@拘謹的;,/adj./@整潔的;,/adj./@呆板的;,/v./@一本正經;
 prix ,/n./@獎金;,/n./@價格;
@@ -815,6 +818,7 @@ rice ,/n./@米飯;
 rich ,/adj./@富有的;
 rife ,/adj./@流行的;,/adj./@蔓延的;,/adj./@充斥的;,/adj./@盛传的;
 rift ,/n./@裂縫;,/v./@裂開;
+rime ,/n./@雾凇;
 ring ,/n./@鈴聲;,/n./@戒指;
 riot ,/n./@暴亂;
 ripe ,/adj./@熟的;,/adj./@成熟的;
@@ -872,6 +876,7 @@ sell ,/v./@賣;
 send ,/v./@发送;
 sent ,/v./@送出;,/v./@寄出;
 sept ,/n./@氏族;
+serf ,/n./@農奴;,/n./@奴隸;
 sexy ,/adj./@性感的;
 shag ,/n./@粗毛;
 sham ,/n./@贗品;,/v./@假冒;
