--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1,3 +1,5 @@
+-hood ,/suff./@狀態;,/suff./@身分;
+-ness ,/suff./@狀態;
 abate ,/vt./@減少;,/vt./@減弱;,/vt./@減輕;
 abbey ,/n./@大修道院;
 abhor ,/v./@極度厭惡;
@@ -36,7 +38,7 @@ alarm ,/n./@警報;
 album ,/n./@專輯;,/n./@相簿;,/n./@集郵簿;,/n./@紀念冊;
 alert ,/n./@警戒;,/n./@警報;
 alias ,/n./@別名;,/adj./@別名叫;
-alibi ,/n./@托辭;,/n./@辯解;
+alibi ,/n./@托辭;,/n./@辯解;,/n./@不在場證明;
 align ,/v./@排列;
 alike ,/adj./@相象的;
 aline ,/v./@排列;
@@ -590,7 +592,7 @@ hence ,/adv./@因此;
 hepta ,/pref./@七;
 hight ,/v./@取名;
 hobby ,/n./@業余愛好;
-hoist ,/vt./@舉起;
+hoist ,/vt./@舉起;,/vt./@升起;,/vt./@吊起;,/vt./@提起;
 hokum ,/n./@噱頭;,/n./@胡言;,/n./@胡扯;
 holly ,/n./@冬青;
 honey ,/n./@蜂蜜;
@@ -612,6 +614,7 @@ hyoid ,/n./@舌骨;,/adj./@舌骨的;
 ideal ,/adj./@理想的;
 idiom ,/n./@成語;,/n./@習語;
 idiot ,/n./@笨蛋;,/n./@白痴;,/n./@傻子;
+Iliad ,/n./@伊里亞特;
 image ,/n./@印象;,/n./@形象;,/n./@圖像;
 imbue ,/v./@灌輸;,/v./@感染;,/v./@滲透;
 imply ,/v./@暗示;,/v./@意味;
@@ -652,6 +655,7 @@ large ,/adj./@大的;
 lasso ,/n./@套索;,/v./@拉攏;,/v./@套捕;
 latch ,/n./@门闩;,/n./@弹簧锁;
 later ,/adv./@后來;,/adv./@稍後;,/adj./@更遲的;
+Latin ,/n./@拉丁語;,/n./@拉丁人;,/adj./@拉丁語的;,/adj./@拉丁人的;
 laugh ,/v./@笑;
 laver ,/n./@紫菜;,/n./@水盆;
 layer ,/n./@層;,/n./@階層;,/n./@地層;
@@ -886,12 +890,14 @@ probe ,/v./@探測;,/n./@探針;,/vt./@刺探;
 prone ,/adj./@俯伏的;
 proof ,/n./@證據;
 prose ,/n./@散文;
+proto ,/redirected./@target="proto-";
 proud ,/adj./@驕傲的;
 prove ,/v./@證明;,/v./@證實;
 prude ,/n./@拘守禮儀的人;
 pseud ,/adj./@假的;,/adj./@不誠實的;
 pulse ,/n./@脈搏;
 punch ,/v./@用拳擊;,/n./@鑽孔機;,/v./@開洞;
+Punic ,/n./@布匿人;,/adj./@布匿的;,/adj./@迦太基人的;,/adj./@迦太基的;
 pupil ,/n./@学生;,/n./@瞳孔;
 purge ,/v./@凈化;
 purse ,/n./@手提袋;
@@ -943,7 +949,7 @@ reply ,/v./@囘應;
 retch ,/v./@作嘔;
 retro ,/n./@制動;,/n./@減速;,/n./@反向;
 revel ,/v./@狂歡;,/n./@狂歡;
-rhyme ,/n./@韻;
+rhyme ,/n./@韻;,/n./@韻腳;,/n./@押韻;,/v./@押韻;
 ridge ,/n./@山脈;,/n./@山脊;,/n./@屋脊;
 rifle ,/n./@步槍;,/n./@來復槍;
 right ,/adj./@對的;,/adj./@右邊的;
@@ -1003,6 +1009,7 @@ scull ,/n./@短槳;,/n./@賽艇;,/v./@搖槳;,/v./@划船;
 segue ,/n./@繼續;
 seize ,/v./@抓住;,/v./@奪取;
 semen ,/n./@精液;
+semi- ,/pref./@半;,/pref./@部分的;,/pref./@不完全的;
 sense ,/n./@感覺;,/n./@道理;,/n./@理智;
 sepia ,/n./@烏賊;,/adj./@深褐色的;
 serie ,/n./@係列;
@@ -1127,6 +1134,7 @@ spray ,/n./@噴霧;,/v./@噴射;
 spree ,/n./@狂歡;
 spurn ,/v./@唾棄;,/v./@摒棄;
 spurt ,/v./@冲刺;,/v./@喷出;,/v./@迸发;
+sputa ,/redirected./@target="sputum";
 squat ,/v./@蹲;
 squid ,/n./@鱿鱼;
 stack ,/n./@堆;
@@ -1378,6 +1386,8 @@ wring ,/v./@擰;,/v./@絞;
 wrist ,/n./@手腕;
 write ,/v./@寫;
 wrong ,/adj./@錯誤的;,/adv./@錯誤地;,/v./@冤枉;,/v./@誹謗;
+xenic ,/adj./@異類的;,/adj./@氙的;
+xenon ,/n./@氙;
 Xhosa ,/n./@科薩人;,/n./@科薩語;
 yacht ,/n./@快艇;,/n./@遊船;
 yearn ,/v./@渴望;,/v./@向往;,/v./@思念;
