--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -907,6 +907,8 @@ myopia ,/n./@近視;,/n./@目光短淺;
 myself ,/pron./@我自己;
 mystic ,/adj./@神秘的;
 napkin ,/n./@餐巾;,/n./@餐巾紙;
+Naples ,/n./@那不勒斯;
+Napoli ,/redirected./@target="Naples";
 narrow ,/adj./@窄的;
 nation ,/n./@國家;,/n./@民族;
 native ,/adj./@出生国的;,/adj./@出生地的;,/adj./@天生的;,/adj./@当地的;,/adj./@本国的;,/adj./@原住民的;
@@ -1061,6 +1063,7 @@ prompt ,/v./@敏捷的;,/v./@促進;,/v./@提示;,/adj./@准時的;
 pronto ,/adj./@立卽的;
 propel ,/v./@推進;,/v./@推動;,/vt./@驱使;
 proper ,/adj./@適合的;,/adj./@專有的;,/adj./@特有的;,/adj./@恰當的;,/adj./@完全的;,/adj./@正當的;,/adj./@得體的;,/adj./@本身的;,/adj./@自身的;,/adj./@正式的;
+proto- ,/pref./@最初的;,/pref./@原始的;
 proton ,/n./@質子;
 pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
@@ -1078,6 +1081,7 @@ quadra ,/adj.//pref./@四的;
 quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
 quarry ,/n./@採石場;,/vt./@採得;,/vi./@採石;
 quartz ,/n./@石英;
+quasi- ,/pref./@類似的;,/pref./@準的;,/pref./@半的;
 quaver ,/v./@顫抖;
 quench ,/v./@熄滅;
 quiver ,/v./@顫抖;
@@ -1178,7 +1182,7 @@ revolt ,/n./@起義;,/v./@反抗;
 reward ,/v./@獎勵;
 rewind ,/v./@重繞;,/v./@倒回;
 rhotic ,/adj./@發R音的;,/adj./@R發音的;
-rhythm ,/n./@旋律;,/n./@節奏;
+rhythm ,/n./@旋律;,/n./@節奏;,/n./@韻律;,/n./@節拍;
 ribald ,/adj./@下流的;,/adj./@粗俗的;,/adj./@猥褻的;
 ribbon ,/n./@帶;,/n./@緞帶;
 riddle ,/n./@字謎;
@@ -1190,6 +1194,7 @@ Robert ,/n./@羅伯特;
 robust ,/adj./@健壯的;,/adj./@強壯的;
 rocket ,/n./@火箭;
 roller ,/n./@滾筒;
+rosary ,/n./@玫瑰經;,/n./@念珠;
 roster ,/n./@花名册;,/n./@登记表;
 rotary ,/adj./@旋轉的;
 rotate ,/v./@旋轉;
@@ -1198,6 +1203,7 @@ rubble ,/n./@碎石;,/n./@碎磚;
 rudder ,/n./@舵;
 ruffle ,/v./@弄皺;,/v./@惹怒;,/v./@擾亂;
 rumble ,/n./@隆隆聲;,/v./@隆隆響;,/n./@咕噥;,/vi./@嘟囔;
+rustic ,/adj./@鄉下的;,/adj./@鄉村式的;,/adj./@質樸的;,/adj./@土氣的;
 sacred ,/adj./@神聖的;
 saddle ,/n./@馬鞍;,/n./@車座;,/n./@鞍狀山脊;,/n./@山鞍;,/n./@脊肉;
 safari ,/n./@旅行;,/n./@狩獵;,/n./@遠征;
@@ -1274,6 +1280,7 @@ shrine ,/n./@神殿;,/n./@聖地;,/n./@神龕;
 shrink ,/v./@收縮;,/v./@畏縮;,/n./@心理醫生;
 shroom ,/n./@蘑菇;
 shroud ,/v./@覆蓋;,/v./@遮蔽;,/n./@覆蓋物;,/n./@壽衣;,/n./@裹尸布;
+Sicily ,/n./@西西里島;
 signal ,/n./@信號;
 signet ,/n./@圖章;,/n./@印章;
 signor ,/n./@先生;
@@ -1341,6 +1348,7 @@ spread ,/v./@傳播;
 spring ,/n./@春;,/n./@泉;
 sprint ,/v./@衝刺;
 sprite ,/n./@妖精;,/n./@精靈;
+sputum ,/n./@痰;
 squall ,/v./@嚎啕;,/v./@尖叫;
 square ,/adj./@平方的;,/adj./@方形的;,/n./@廣場;,/adj./@直角的;
 squash ,/v./@鎮壓;,/vt./@壓扁;,/vt./@壓碎;,/vt./@擠壓;,/n./@擁擠;,/n./@果汁飲料;,/n./@软式壁球;,/n./@壓碎的一攤;
@@ -1441,6 +1449,7 @@ thesis ,/n./@論文;
 thirst ,/n./@渴望;
 Thomas ,/n./@托馬斯;
 though ,/conj./@雖然;
+thrall ,/n./@奴隸;,/n./@奴僕;,/n./@奴役;,/n./@束縛;
 thrash ,/vt./@打;,/vi./@打谷;
 thread ,/n./@綫;,/v./@穿過;
 threat ,/n./@恐嚇;
