--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -77,7 +77,7 @@ approve ,/v./@同意;,/v./@批准;
 apricot ,/n./@杏;,/n./@杏樹;,/adj./@杏黃色的;
 apropos ,/adj./@恰好的;
 aquifer ,/n./@含水土層;,/n./@蓄水層;
-archaic ,/adj./@古代的;
+archaic ,/adj./@古代的;,/adj./@古體的;,/adj./@過時的;,/adj./@已廢的;
 archive ,/n./@檔案館;,/n./@檔案文件;,/v./@存档;
 arduous ,/adj./@努力的;
 arousal ,/n./@喚醒;,/n./@覺醒;,/n./@激勵;
@@ -410,6 +410,7 @@ diamond ,/n./@鑽石;
 dictate ,/v./@口授;,/v./@命令;
 diction ,/n./@措辭;
 digital ,/adj./@數字的;
+dignify ,/vt./@使高貴;,/vt./@使有尊嚴;
 dignity ,/n./@尊嚴;
 digraph ,/n./@二合字母;
 digress ,/v./@離題;,/v./@跑題;
@@ -464,6 +465,7 @@ edition ,/n./@版本;
 educate ,/v./@教育;
 elastic ,/adj./@有彈性的;
 elation ,/n./@興髙采烈;
+elegant ,/adj./@優雅的;,/adj./@雅緻的;,/adj./@簡明的;,/adj./@精緻的;,/adj./@優美的;
 element ,/n./@元素;,/n./@要素;
 elevate ,/v./@提升;,/v./@提髙;
 elision ,/n./@發音省略;
@@ -835,6 +837,7 @@ monster ,/n./@怪物;
 montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
 morning ,/n./@早上;
+mugwort ,/n./@艾蒿;
 mulatto ,/n./@黑白混血兒;
 mummify ,/vt./@木乃伊化;
 mundane ,/adj./@平凡的;,/adj./@世俗的;,/adj./@乏味的;
@@ -961,6 +964,7 @@ petrify ,/vt./@吓呆;,/vt./@石化;,/vi./@石化;
 phantom ,/n./@幽靈;,/n./@幻影;,/n./@幻覺;,/n./@幻像;
 pharaoh ,/n./@法老;
 phoenix ,/n./@鳳凰;
+phoneme ,/n./@音位;,/n./@音素;
 physics ,/n./@物理學;
 picture ,/n./@圖片;
 pillage ,/vt./@劫掠;,/n./@劫掠;
@@ -1117,7 +1121,7 @@ respond ,/v./@反應;,/v./@回應;,/v./@響應;,/v./@答復;
 restful ,/adj./@閑適的;
 restore ,/v./@恢復;
 retired ,/adj./@退休的;
-retract ,/v./@縮囘;
+retract ,/v./@縮回;,/v./@撤回;,/v./@收回;,/v./@撤銷;
 reunion ,/n.v./@聯合;,/n./@重聚;,/n./@团聚;
 reunite ,/v./@再聯合;,/v./@重聚;
 revenge ,/v.//n./@報復;,/v.//n./@復仇;
@@ -1173,6 +1177,7 @@ selfish ,/adj./@自私的;
 seminar ,/n./@研討會;,/n./@學術講座;
 sensual ,/adj./@肉欲的;,/adj./@感覺的;
 sequent ,/adj./@連續的;,/adj./@其次的;,/adj./@相繼的;,/n./@後果;,/n./@相繼發生;
+serfdom ,/n./@農奴身分;,/n./@奴隸身分;
 serious ,/adj./@嚴肅的;
 servant ,/n./@僕人;
 service ,/n./@服務;
@@ -1198,13 +1203,15 @@ silicon ,/n./@矽;
 similar ,/adj./@相似的;
 simplex ,/adj./@簡單的;
 sincere ,/adj./@眞誠的;
+Sinitic ,/adj./@漢語的;
 sixteen ,/adj./@十六;
 skeptic ,/n./@懷疑論者;
 skylark ,/vi./@胡鬧;,/n./@雲雀;
 skyline ,/n./@天涯;
 slander ,/n./@誹謗;,/vt./@誹謗;,/vt./@詆毀;
 slanted ,/adj./@歪的;
-slavery ,/n./@奴隸制;
+slavery ,/n./@奴隸制;,/n./@奴役;,/n./@奴隸身分;
+slavish ,/adj./@奴隸的;,/adj./@奴隸般的;
 slender ,/adj./@細長的;,/adj./@苗條的;
 slumber ,/n./@睡眠;
 smatter ,/v./@略知;
@@ -1303,6 +1310,7 @@ tedious ,/adj./@乏味的;,/adj./@煩悶的;
 teenage ,/adj./@青少年的;
 tenfold ,/adj./@十倍的;
 tension ,/n./@拉力;,/n./@張力;,/n./@緊張;
+Teochew ,/adj./@潮州人的;,/n./@潮州人;
 tequila ,/n./@龍舌蘭酒;
 termite ,/n./@白蟻;
 ternary ,/adj./@三元的;,/adj./@三進制的;
@@ -1388,7 +1396,7 @@ utilize ,/v./@使用;,/vt./@利用;
 utopian ,/adj./@烏托邦的;,/adj./@空想的;
 vacancy ,/n./@空缺;,/n./@空位;,/n./@空白;,/n./@空虛;
 vaccine ,/n./@疫苗;
-vaginal ,/adj./@阴道的;
+vaginal ,/adj./@阴道的;,/adj./@葉鞘的;
 vagrant ,/adj./@流浪的;,/adj./@漂泊的;
 valiant ,/adj./@英勇的;
 vamoose ,/v./@匆匆離開;
@@ -1426,7 +1434,8 @@ vocalic ,/adj./@元音的;
 volcano ,/n./@火山;
 voltage ,/n./@電壓;
 voucher ,/n./@代金券;,/n./@票券;,/n./@收据;,/n./@凭证;
-vulgate ,/adj./@通行的;,/adj./@公認的;,/adj./@拉丁文聖經的;
+vulgate ,/adj./@通行的;,/adj./@公認的;,/adj./@普通的;,/adj./@通俗的;,/adj./@口語的;
+Vulgate ,/n./@拉丁文聖經;,/adj./@拉丁文聖經的;
 vulture ,/n./@禿鷹;,/n./@禿鷲;,/n./@貪婪的人;
 warlock ,/n./@術士;,/n./@巫師;,/n./@魔術師;
 warning ,/n./@警告;
