--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -155,6 +155,7 @@ bulkhead ,/n./@艙壁;,/n./@隔板;,/n./@隔牆;,/n./@堤岸;
 burglary ,/n./@盗窃;
 business ,/n./@事務;,/n./@買賣;,/n./@行業;,/n./@商業;,/n./@商號;
 calabash ,/n./@葫蘆;,/n./@瓢;,/n./@加拉巴果;,/n./@加拉巴木;
+Calabria ,/n./@卡拉布里亞;
 calamity ,/n./@災難;
 calculus ,/n./@微积分;
 calendar ,/n./@日历;
@@ -170,6 +171,7 @@ careless ,/adj./@马虎的;,/adj./@疏忽的;
 carnival ,/n./@狂歡節;,/n./@嘉年華會;
 carousel ,/n./@旋转木马;
 carriage ,/n./@运输;,/n./@四轮马车;,/n./@车厢;
+Carthage ,/n./@迦太基;
 cashmere ,/n./@羊絨;
 casually ,/adj./@随便的;
 casualty ,/n./@傷亡;,/n./@伤亡人员;,/n./@受害者;,/n./@急诊室;
@@ -271,6 +273,7 @@ coziness ,/n./@舒適;,/n./@安逸;,/n./@愜意;
 creation ,/n./@創造;
 creative ,/adj./@创造性的;
 creature ,/n./@生物;
+credence ,/n./@可信性;,/n./@相信;,/n./@祭器臺;
 criminal ,/n./@罪犯;
 criteria ,/n./@標準;,/n./@條件;
 critical ,/adj./@批评的;,/adj./@批判的;
@@ -396,11 +399,11 @@ eighteen ,/adj./@十八;
 ejection ,/n./@噴射;,/n./@彈出;
 election ,/n./@选举;
 electric ,/adj./@电的;
-elegance ,/n./@优雅;
+elegance ,/n./@优雅;,/n./@雅緻;,/n./@典雅;,/n./@精緻;,/n./@簡潔;,/n./@簡明;
 elevator ,/n./@电梯;
 eligible ,/adj./@合格的;,/n./@合格者;
 elongate ,/vt./@拉長;,/vt./@伸長;,/vt./@延長;
-eloquent ,/adj./@表達清晰的;,/adj./@雄辯的;
+eloquent ,/adj./@表達清晰的;,/adj./@雄辯的;,/adj./@有說服力的;,/adj./@傳神達意的;,/adj./@意味深長的;
 emblazon ,/v./@頌揚;,/v./@用紋章裝飾;
 embolden ,/v./使@有膽量;
 emigrant ,/n./@移民;
@@ -763,6 +766,7 @@ musician ,/n./@音乐家;
 mustache ,/n./@胡子;,/n./@髭;
 mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;,/vt./@毀壞;
 narcotic ,/n./@致幻毒品;,/n./@催眠藥;,/n./@麻醉劑;,/adj./@麻醉的;
+nasalize ,/vt./@鼻音化;
 national ,/adj./@国家的;,/adj./@民族的;
 nativity ,/n./@耶稣的诞生;
 nautical ,/adj./@航海的;
@@ -873,6 +877,7 @@ perverse ,/adj./@不当的;,/adj./@有悖的;,/adj./@违反常理的;,/adj./@乖
 petition ,/n./@請願;
 petulant ,/adj./@暴躁的;,/adj./@任性的;
 pharmacy ,/n./@藥房;,/n./@藥劑學;,/n./@製藥學;,/n./@製藥業;,/n./@配藥學;
+phonemic ,/adj./@音位的;
 phonetic ,/adj./@語音的;,/adj./@語音學的;
 physique ,/n./@體格;,/n./@體形;
 platform ,/n./@平台;
@@ -962,6 +967,7 @@ reliance ,/n./@依賴;,/n./@依靠;
 religion ,/n./@宗教;
 remember ,/v./@记得;,/v./@想起;,/v./@記住;
 renegade ,/adj./@叛教的;,/n./@叛徒;,/adj./@反叛的;,/n./@叛逆者;
+renounce ,/vt./@聲明放棄;,/vt./@拋棄;,/vt./@宣布中止;,/vt./@退出;,/vt./@摒棄;
 renovate ,/v./@更新;,/v./@修复;
 repartee ,/n./@妙語;,/n./@巧辯;,/n./@機智的回答;
 reporter ,/n./@報告人;,/n./@記者;
@@ -1037,6 +1043,7 @@ shortage ,/n./@不足;,/n./@缺少;
 shortcut ,/n./@捷徑;
 shoulder ,/n./@肩;
 showcase ,/n./@陳列櫃;,/n./@展示场所;,/vt./@展示;,/vt./@展現;,/vt./@陳列;,/vt./@亮相;
+Sicilian ,/adj./@西西里的;,/n./@西西里人;,/n./@西西里方言;,/adj./@西西里人的;,/adj./@西西里方言的;
 simplify ,/v./@简化;
 simulate ,/v./@模仿;
 simulink ,/n./@模型;,/n./@仿真软件;
@@ -1079,7 +1086,7 @@ squander ,/v./@浪費;,/vt./@挥霍;
 staccato ,/n./@斷音;,/n./@斷奏;,/adj./@斷音的;,/adj./@斷奏的;
 stallion ,/n./@種馬;,/n./@成年公馬;
 stampede ,/n./@驚跑;,/v./@驚逃;
-standard ,/n./@标准;,/adj./@标准的;
+standard ,/n./@标准;,/adj./@标准的;,/n./@軍旗;
 standoff ,/n./@僵持;,/n./@均衡;,/n./@僵局;
 starfish ,/n./@海星;
 starving ,/adj./@饥饿的;
@@ -1147,6 +1154,7 @@ thesauri ,/n./@主題詞表;,/n./@同義詞詞典;,/n./@同反義詞詞典;
 thinking ,/v./@想;,/n./@思想;
 thirteen ,/n./@十三;
 thousand ,/n./@千;
+thraldom ,/n./@奴役;,/n./@奴隸身分;
 threaten ,/v./@恐吓;
 thriller ,/n./@惊悚片;,/n./@惊險小說;,/n./@惊险电影;
 throttle ,/v./@扼殺;,/v./@節流;,/v./@壓制;,/v./@窒息;,/v./@限速;,/n./@風門;,/n./@喉嚨;,/n./@節流閥;
@@ -1212,6 +1220,7 @@ vigilant ,/adj./@警惕的;,/adj./@警戒的;,/adj./@警醒的;
 vignette ,/n./@片段;,/n./@短文;,/n./@小插曲;,/n./@花絮;,/n./@圖案;,/n./@蔓藤花樣;,/n./@小花饰;
 vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
+virginal ,/adj./@處女的;,/adj./@處女般的;,/adj./@純潔的;,/adj./@純真的;
 visceral ,/adj./@內臟的;
 visional ,/adj./@虚幻的;,/adj./@视力的;
 vitiligo ,/n./@白癜風;,/n./@白斑病;
