--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -94,7 +94,7 @@ assurance ,/n./@保证;,/n./@确信;
 attention ,/n./@注意;
 attentive ,/adj./@注意的;,/adj./@留意的;
 attribute ,/n./@属性;,/n./@特质;
-authentic ,/adj./@真正的;
+authentic ,/adj./@真正的;,/adj./@真實的;,/adj./@可靠的;,/adj./@真實可信的;
 authority ,/n./@权威;
 autocracy ,/n./@獨裁;
 autograph ,/v./@親筆;
@@ -139,6 +139,7 @@ broadcast ,/n./@广播;
 bumblebee ,/n./@熊蜂;,/n./@大黃蜂;
 butterfly ,/n./@蝴蝶;
 cafeteria ,/n./@自助餐廳;
+Calabrian ,/n./@卡拉布里亞人;,/adj./@卡拉布里亞的;,/adj./@卡拉布里亞人的;
 calculate ,/v./@计算;
 calibrate ,/v./@矯正;
 caliphate ,/n./@伊斯蘭王權;,/n./@阿拉伯帝國;
@@ -162,6 +163,7 @@ celebrate ,/v./@庆祝;
 celebrity ,/n./@名人;
 celestial ,/adj./@天国的;,/adj./@天空的;,/adj./@天体的;,/adj./@精妙的;
 cellulose ,/n./@纖維素;
+centurion ,/n./@百人隊隊長;
 certainly ,/adv./@当然;
 certainty ,/n./@必然;
 challenge ,/n./@挑戰;,/v./@挑戰;,/v./@質問;
@@ -191,6 +193,7 @@ collation ,/n./@整理;,/n./@校對;
 colleague ,/n./@同事;
 collision ,/v./@冲突;,/v./@抵触;,/v./@碰撞;
 collocate ,/n./@布置;
+colloquia ,/redirected./@target="colloquium";
 Colosseum ,/n./@羅馬圓形大競技場;
 commingle ,/v./@充分混合;
 commissar ,/n./@政治委员;,/n./@人民委员;
@@ -388,6 +391,7 @@ establish ,/v./@建立;,/v./@确立;
 ethnicity ,/n./@種族特點;,/n./@種族背景;,/n./@種族淵源;
 etiquette ,/n./@禮節;,/n./@礼仪;,/n./@规矩;
 etymology ,/n./@词源;,/n./@词源学;
+Eucharist ,/n./@聖餐;,/n./@聖體;
 euthanize ,/vt./@安乐死;
 evaporate ,/v./@蒸發;,/v./@脫水;,/v./@消失;
 evolution ,/n./@進化;,/n./@發展;
@@ -468,6 +472,7 @@ gratitude ,/n./@感激;,/n./@感谢;
 grievance ,/n./@不滿;,/n./@不平;,/n./@委屈;,/n./@冤情;
 grotesque ,/n./@怪異風格;,/n./@怪誕圖樣;,/adj./@奇形怪狀的;,/adj./@怪誕的;,/adj./@古怪的;,/adj./@怪異風格的;
 guarantee ,/v./@保证;
+guesswork ,/n./@猜測;,/n./@猜測的結果;
 guideline ,/n./@指導方針;
 gymnasium ,/n./@體育館;,/n./@健身房;,/n./@體操學校;
 gymnastic ,/adj./@體操的;,/adj./@體育的;
@@ -659,7 +664,7 @@ nutrition ,/n./@營養;
 obedience ,/n./@服从;,/n./@順從;
 objection ,/n./@反对;
 objective ,/adj./@客观的;
-oblivious ,/adj./@健忘的;,/adj./@忘卻的;
+oblivious ,/adj./@健忘的;,/adj./@忘卻的;,/adj./@不知曉的;,/adj./@未察覺的;
 obnoxious ,/adj./@可憎的;
 obscurity ,/n./@晦涩;,/n./@默默无闻;,/n./@難解;,/n./@隱匿;,/n./@卑微;
 obsession ,/n./@迷戀;,/n./@沉迷;,/n./@癡迷;
@@ -725,7 +730,9 @@ petroleum ,/n./@石油;
 petulance ,/n./@易怒;,/n./@暴躁;
 pharaonic ,/adj./@法老的;,/adj./@法老時代的;
 pheromone ,/n./@信息素;
+Phoenicia ,/n./@腓尼基;
 phonetics ,/n./@語音學;
+phonology ,/n./@音系學;,/n./@音系;,/n./@語音體系;
 physician ,/n./@内科醫生;
 phytology ,/n./@植物学;
 pilferage ,/n./@偷竊;
@@ -923,7 +930,7 @@ stressful ,/adj./@紧张的;
 structure ,/n./@结构;,/n./@组织;
 subatomic ,/adj./@亚原子的;
 subdivide ,/v./@再分;
-subjugate ,/vt./@征服;,/v./@剋制;
+subjugate ,/vt./@征服;,/v./@剋制;,/vt./@制服;
 submarine ,/n./@潜艇;
 subscribe ,/v./@订阅;,/v./@赞成;,/v./@签署;,/v./@捐助;
 subscript ,/adj./@下標的;,/n./@下標;
@@ -954,7 +961,7 @@ telephone ,/n./@电话;
 telephony ,/n./@電話通訊;,/n./@電話學;,/n./@電話製造法;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
-tenebrous ,/adj./@陰暗的;,/adj./@黑暗的;
+tenebrous ,/adj./@陰暗的;,/adj./@黑暗的;,/adj./@陰沉的;,/adj./@晦澀的;
 tentative ,/adj./@試探性的;,/adj./@試驗性的;,/adj./@暫時性的;,/adj./@嘗試性的;
 terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
@@ -984,6 +991,7 @@ treadmill ,/n./@踏車;,/n./@跑步機;,/n./@單調的工作;
 treatment ,/n./@治療;,/n./@待遇;
 trembling ,/adj./@发抖的;
 tributary ,/adj./@支流的;,/adj./@納貢的;,/n./@支流;,/n./@附庸國;
+triumphal ,/adj./@慶祝勝利的;,/adj./@凱旋的;
 turbulent ,/adj./@动荡的;
 umbilical ,/adj./@脐带的;
 unanimous ,/adj./@一致的;,/adj./@意见一致的;,/adj./@一致通過的;
