--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -38,6 +38,7 @@ ambivalent
 ameliorate
 ammunition
 anesthetic
+Anglophone
 annihilate
 annotation
 antagonism
@@ -130,6 +131,8 @@ collecting
 collection
 collective
 collegiate
+colloquial
+colloquium
 coloration
 commandeer
 commentary
@@ -300,6 +303,7 @@ expedition
 experience
 experiment
 expiration
+exposition
 expression
 extensible
 extinction
@@ -336,6 +340,7 @@ gymnastics
 gyrational
 gyroscopic
 handicraft
+harmonious
 helicopter
 hemoglobin
 hemorrhage
@@ -421,6 +426,7 @@ kinematics
 knighthood
 Kyrgyzstan
 laboratory
+lavishness
 leadership
 legitimate
 lengendary
@@ -451,6 +457,7 @@ menstruate
 mercantile
 metallurgy
 methodical
+meticulous
 microscope
 millennium
 millilitre
@@ -488,6 +495,7 @@ occidental
 occupation
 occurrence
 octahedron
+omnificent
 omniscient
 opposition
 optimistic
@@ -523,6 +531,7 @@ perversion
 phenomenal
 phenomenon
 philosophy
+Phoenician
 phonograph
 phosphorus
 pickpocket
@@ -560,6 +569,7 @@ prosperous
 protection
 protrusion
 providence
+provincial
 psychopath
 pubescence
 pugnacious
@@ -673,6 +683,7 @@ technology
 telepathic
 television
 temptation
+tenebrific
 thoughtful
 throughout
 throughput
@@ -715,6 +726,7 @@ validation
 vehemently
 ventilator
 verifiable
+victorious
 vindictive
 visionally
 vocabulary
