--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -74,6 +74,7 @@ condominium
 confederate
 confinement
 confounding
+conjugation
 conjunction
 connotation
 consecutive
@@ -287,6 +288,7 @@ parentheses
 participant
 participate
 partnership
+paternoster
 pathologist
 patronizing
 peculiarity
@@ -357,6 +359,7 @@ restriction
 retaliation
 retribution
 retroactive
+revisionism
 rudimentary
 salvolatile
 sarcophagus
