--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -15,6 +15,7 @@ anal
 anew
 anno
 anti
+apex
 apse
 aqua
 arch
@@ -153,6 +154,7 @@ code
 coil
 coke
 cold
+com-
 coma
 comb
 come
@@ -773,6 +775,7 @@ pour
 pout
 pram
 pray
+pre-
 prey
 prim
 prix
@@ -815,6 +818,7 @@ rice
 rich
 rife
 rift
+rime
 ring
 riot
 ripe
@@ -872,6 +876,7 @@ sell
 send
 sent
 sept
+serf
 sexy
 shag
 sham
