--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -1,3 +1,5 @@
+-hood
+-ness
 abate
 abbey
 abhor
@@ -612,6 +614,7 @@ hyoid
 ideal
 idiom
 idiot
+Iliad
 image
 imbue
 imply
@@ -652,6 +655,7 @@ large
 lasso
 latch
 later
+Latin
 laugh
 laver
 layer
@@ -886,12 +890,14 @@ probe
 prone
 proof
 prose
+proto
 proud
 prove
 prude
 pseud
 pulse
 punch
+Punic
 pupil
 purge
 purse
@@ -1003,6 +1009,7 @@ scull
 segue
 seize
 semen
+semi-
 sense
 sepia
 serie
@@ -1127,6 +1134,7 @@ spray
 spree
 spurn
 spurt
+sputa
 squat
 squid
 stack
@@ -1378,6 +1386,8 @@ wring
 wrist
 write
 wrong
+xenic
+xenon
 Xhosa
 yacht
 yearn
