--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -907,6 +907,8 @@ myopia
 myself
 mystic
 napkin
+Naples
+Napoli
 narrow
 nation
 native
@@ -1061,6 +1063,7 @@ prompt
 pronto
 propel
 proper
+proto-
 proton
 pseudo
 psyche
@@ -1078,6 +1081,7 @@ quadra
 quaint
 quarry
 quartz
+quasi-
 quaver
 quench
 quiver
@@ -1190,6 +1194,7 @@ Robert
 robust
 rocket
 roller
+rosary
 roster
 rotary
 rotate
@@ -1198,6 +1203,7 @@ rubble
 rudder
 ruffle
 rumble
+rustic
 sacred
 saddle
 safari
@@ -1274,6 +1280,7 @@ shrine
 shrink
 shroom
 shroud
+Sicily
 signal
 signet
 signor
@@ -1341,6 +1348,7 @@ spread
 spring
 sprint
 sprite
+sputum
 squall
 square
 squash
@@ -1441,6 +1449,7 @@ thesis
 thirst
 Thomas
 though
+thrall
 thrash
 thread
 threat
