--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -410,6 +410,7 @@ diamond
 dictate
 diction
 digital
+dignify
 dignity
 digraph
 digress
@@ -464,6 +465,7 @@ edition
 educate
 elastic
 elation
+elegant
 element
 elevate
 elision
@@ -835,6 +837,7 @@ monster
 montage
 monthly
 morning
+mugwort
 mulatto
 mummify
 mundane
@@ -961,6 +964,7 @@ petrify
 phantom
 pharaoh
 phoenix
+phoneme
 physics
 picture
 pillage
@@ -1173,6 +1177,7 @@ selfish
 seminar
 sensual
 sequent
+serfdom
 serious
 servant
 service
@@ -1198,6 +1203,7 @@ silicon
 similar
 simplex
 sincere
+Sinitic
 sixteen
 skeptic
 skylark
@@ -1205,6 +1211,7 @@ skyline
 slander
 slanted
 slavery
+slavish
 slender
 slumber
 smatter
@@ -1303,6 +1310,7 @@ tedious
 teenage
 tenfold
 tension
+Teochew
 tequila
 termite
 ternary
@@ -1427,6 +1435,7 @@ volcano
 voltage
 voucher
 vulgate
+Vulgate
 vulture
 warlock
 warning
