--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -139,6 +139,7 @@ broadcast
 bumblebee
 butterfly
 cafeteria
+Calabrian
 calculate
 calibrate
 caliphate
@@ -162,6 +163,7 @@ celebrate
 celebrity
 celestial
 cellulose
+centurion
 certainly
 certainty
 challenge
@@ -191,6 +193,7 @@ collation
 colleague
 collision
 collocate
+colloquia
 Colosseum
 commingle
 commissar
@@ -388,6 +391,7 @@ establish
 ethnicity
 etiquette
 etymology
+Eucharist
 euthanize
 evaporate
 evolution
@@ -468,6 +472,7 @@ gratitude
 grievance
 grotesque
 guarantee
+guesswork
 guideline
 gymnasium
 gymnastic
@@ -725,7 +730,9 @@ petroleum
 petulance
 pharaonic
 pheromone
+Phoenicia
 phonetics
+phonology
 physician
 phytology
 pilferage
@@ -984,6 +991,7 @@ treadmill
 treatment
 trembling
 tributary
+triumphal
 turbulent
 umbilical
 unanimous
