--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -55,6 +55,7 @@ cap ,/n./@帽子;,/n./@盖@子;
 car ,/n./@汽車;
 cat ,/n./@貓;
 CIA ,/n.//abbr./@中情局;
+com ,/redirected./@target="com-";
 con ,/adj./@否@定;,/adj./@否@...的;,/adj./@反@...的;
 cop ,/n./@警察;
 cow ,/n./@牛;
