--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -155,6 +155,7 @@ bulkhead
 burglary
 business
 calabash
+Calabria
 calamity
 calculus
 calendar
@@ -170,6 +171,7 @@ careless
 carnival
 carousel
 carriage
+Carthage
 cashmere
 casually
 casualty
@@ -271,6 +273,7 @@ coziness
 creation
 creative
 creature
+credence
 criminal
 criteria
 critical
@@ -763,6 +766,7 @@ musician
 mustache
 mutilate
 narcotic
+nasalize
 national
 nativity
 nautical
@@ -873,6 +877,7 @@ perverse
 petition
 petulant
 pharmacy
+phonemic
 phonetic
 physique
 platform
@@ -962,6 +967,7 @@ reliance
 religion
 remember
 renegade
+renounce
 renovate
 repartee
 reporter
@@ -1037,6 +1043,7 @@ shortage
 shortcut
 shoulder
 showcase
+Sicilian
 simplify
 simulate
 simulink
@@ -1147,6 +1154,7 @@ thesauri
 thinking
 thirteen
 thousand
+thraldom
 threaten
 thriller
 throttle
@@ -1212,6 +1220,7 @@ vigilant
 vignette
 vigorous
 violence
+virginal
 visceral
 visional
 vitiligo
