--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1146,6 +1146,7 @@ rummage ,/vt./@搜查;,/vi./@翻找;,/n./@翻找;
 rupture ,/vt./@破裂;,/vt./@断绝;,/n./@破裂;,/n./@断绝;
 sabbath ,/n./@安息日;
 salvage ,/v./@搶救;,/v./@打撈;
+sapient ,/n./@智人;,/adj./@智人的;,/adj./@智慧的;,/adj./@聰明的;
 sarcasm ,/n./@諷刺;,/n./@嘲笑;
 satchel ,/n./@挎包;,/n./@書包;,/n./@小背包;
 satisfy ,/v./@滿足;
